<resources>
    <string name="app_name">Movie XIX</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_movie">Movie</string>
    <string name="tab_tvshow">TV Show</string>
    <string name="item_name">item name</string>
    <string name="item_detail">item detail</string>
    <string name="rating">Rating</string>
    <string name="en_lang">English</string>
    <string name="id_lang">Indonesia</string>
    <string name="release_date">Release Date :</string>
    <string name="overview">Overview</string>
    <string name="change_language">Change Language</string>
    <string name="favorite">Favorite</string>
    <string name="success_add">Successfully added to favorites</string>
    <string name="success_remove">Successfully removed from favorites</string>
    <string name="no_content">No Content</string>
    <string name="backdrop_image">backdrop image</string>
    <string name="poster_image">poster image</string>
    <string name="overview_not_found">Overview Not Found</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Movie/TV Show</string>
    <string name="language_setting_label">Language Setting</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="reminder_release_desc">Reminder showing the movie that released today</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_desc">Reminder for return to app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="daily_remind_text">missing you!</string>
    <string name="appwidget_text">Movie Favorite</string>
</resources>
