<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:iconifiedByDefault="true"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_fav_activity"
        android:contentDescription="@string/favorite"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting"
        android:contentDescription="@string/setting"
        android:icon="@drawable/ic_setting_24dp"
        android:title="@string/setting"
        app:showAsAction="never" />
</menu>